compiler/fir/analysis-tests/testData/resolve/extendedCheckers/unused/invokeCustomTypeMember.kt
class Foo {
    operator fun invoke() {}
}

fun foo() {
    val <!UNUSED_VARIABLE!>x<!> = Foo()

    x()
}
